I updated my website about students' self-esteem

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   <head>
-    <title></title>
+    <title>Self-Esteem</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1></h1>
+    <h1>Fostering Self-Esteem in Students</h1>
+    <h3>Students believe what they consistently hear...</h3>
+<img src="./happy student.jpg" alt="">
+<h2>Every student matters!  Let the children in your classes know you care!</h2>
   </body>
 </html>
